列表視窗的美化

--- a/NiceDream/NiceDream/NiceDream.csproj
+++ b/NiceDream/NiceDream/NiceDream.csproj
@@ -106,5 +106,8 @@
   <ItemGroup>
     <Resource Include="moon.bmp" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="halfmoon.bmp" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
